package com.example.Spring_Boot_Security_HW;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class SpringBootSecurityHwApplication {

	public static void main(String[] args) {
		SpringApplication.run(SpringBootSecurityHwApplication.class, args);
	}

}
